--- a/themes/fairygui/layout/layout.ejs
+++ b/themes/fairygui/layout/layout.ejs
@@ -33,7 +33,7 @@
     <body class="<%- isIndex ? '' : 'docs' -%>">
         <div id="mobile-bar"  data-bg-text="FairyGUI" <%- isIndex ? 'class="top"' : '' %>>
             <a class="menu-button"></a>
-            <a class="logo" href="https://github.com/fairygui/FairyGUI-unity"></a>
+            <a class="logo" href="https://github.com/fairygui"></a>
         </div>
         <%- partial('partials/header') %>
         <% if (!isIndex) { %>
