--- a/themes/fairygui/layout/partials/sidebar.ejs
+++ b/themes/fairygui/layout/partials/sidebar.ejs
@@ -51,6 +51,16 @@
 	                </li>
 	            <% }) %>
 
+	            <% site.pages.find({type: 'guide_cocos2dx'}).sort('order').each(function (p) { %>
+	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
+	                <% if (fileName === 'index') { %>
+	                <li><h3>Cocos2dx</h3></li>
+	                <% } %>
+	                <li>
+	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
+	                </li>
+	            <% }) %>
+	            
 	            <% site.pages.find({type: 'guide_laya'}).sort('order').each(function (p) { %>
 	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
 	                <% if (fileName === 'index') { %>
@@ -85,16 +95,6 @@
 	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
 	                <% if (fileName === 'index') { %>
 	                <li><h3>Flash AS3</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-	            
-	           	<% site.pages.find({type: 'guide_haxe'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>Haxe</h3></li>
 	                <% } %>
 	                <li>
 	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
