--- a/themes/fairygui/layout/partials/sidebar.ejs
+++ b/themes/fairygui/layout/partials/sidebar.ejs
@@ -61,6 +61,16 @@
 	                </li>
 	            <% }) %>
 	            
+	            <% site.pages.find({type: 'guide_cry'}).sort('order').each(function (p) { %>
+	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
+	                <% if (fileName === 'index') { %>
+	                <li><h3>CryEngine</h3></li>
+	                <% } %>
+	                <li>
+	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
+	                </li>
+	            <% }) %>
+	            
 	            <% site.pages.find({type: 'guide_laya'}).sort('order').each(function (p) { %>
 	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
 	                <% if (fileName === 'index') { %>
