--- a/themes/fairygui/layout/index.ejs
+++ b/themes/fairygui/layout/index.ejs
@@ -59,7 +59,7 @@
   </ul>
   <br/><br/><br/>
 
-  <p>官方QQ群: 一群 434866637（已满） 二群 614444599</p>
+	<p>商务合作：bd@fairygui.com 技术交流群: 434866637（满） 614444599</p>
   <p>&copy; FairyGUI.com 2014-<%- new Date().getFullYear() %> <a href='http://www.miitbeian.gov.cn/'>粤ICP备15041112号</a> <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256364934'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1256364934%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
 </div>
 
