--- a/themes/fairygui/layout/partials/main_menu.ejs
+++ b/themes/fairygui/layout/partials/main_menu.ejs
@@ -8,6 +8,6 @@
 <li><a href="<%- url_for("http://www.fairygui.com/api/")%>" target="_blank"  class="nav-link">API</a></li>
 <li><a href="<%- url_for("/examples/") %>" class="nav-link<%- page.path.match(/examples/) ? ' current' : '' %>">在线例子</a></li>
 <li><a href="<%- url_for("/showcase/") %>" class="nav-link<%- page.path.match(/showcase/) ? ' current' : '' %>">商业案例</a></li>
-<li><a href="<%- url_for("http://ask.fairygui.com/")%>" target="_blank" class="nav-link">问答社区</a></li>
+<li><a href="<%- url_for("http://ask.fairygui.com/")%>" target="_blank" class="nav-link">问答</a></li>
 <li><a href="<%- url_for("/about/") %>" class="nav-link<%- page.path.match(/about/) ? ' current' : '' %>">关于</a></li>
 <li><a class="nav-link">中文</a> / <a href="<%- url_for("http://en.fairygui.com/")%>" target="_self"  class="nav-link">English</a></li>
