--- a/themes/fairygui/layout/partials/main_menu.ejs
+++ b/themes/fairygui/layout/partials/main_menu.ejs
@@ -1,4 +1,4 @@
-<% var doc = page.path.match(/(guide)|(examples)|(api)|(about)|(product)|(showcase)|(support)/) %>
+<% var doc = page.path.match(/(guide)|(examples)|(api)|(about)|(product)|(showcase)|(support)|(service)/) %>
 <% if (doc) { %>
 	<li><a href="<%- url_for('/') %>" class="nav-link">首页</a></li>
 <% } %>
