--- a/themes/fairygui/layout/index.ejs
+++ b/themes/fairygui/layout/index.ejs
@@ -9,11 +9,11 @@
     <div class="right">
       <br/>
       <h1>
-        FairyGUI<sup>3.0</sup>
+        FairyGUI
       </h1>
       <br/><br/><br/>
         <div class="text">超强 UI 编辑器，跨平台开源 UI 解决方案，制作效率直接提升 50%！</div>
-        <div class="text">Unity,Cocos2dx,CryEngine,MonoGame,Havok Vision,Starling,Egret,LayaAir,Haxe,Pixi,LibGDX and More ……</div>
+        <div class="text">Unity,Cocos2dx,CryEngine,MonoGame,Vision,Starling,Egret,LayaAir,CocosCreator,Haxe,PIXI,LibGDX and More ……</div>
       <br/>
       <p>
         <a class="button" href="<%- url_for("/product/") %>">免费获取</a>
