--- a/themes/fairygui/layout/partials/sidebar.ejs
+++ b/themes/fairygui/layout/partials/sidebar.ejs
@@ -29,70 +29,20 @@
 	                </li>
 	            <% }) %>
 	
+	            <% site.pages.find({type: 'guide_sdk'}).sort('order').each(function (p) { %>
+	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
+	                <% if (p.order == 0) { %>
+	                <li><h3>SDK</h3></li>
+	                <% } %>
+	                <li>
+	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
+	                </li>
+	            <% }) %>
+
 	            <% site.pages.find({type: 'guide_unity'}).sort('order').each(function (p) { %>
 	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
 	                <% if (fileName === 'index') { %>
-	                <li><h3>Unity</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-
-	            <% site.pages.find({type: 'guide_cocos2dx'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>Cocos2dx</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-	            
-	            <% site.pages.find({type: 'guide_cry'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>CryEngine</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-	            
-	            <% site.pages.find({type: 'guide_laya'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>LayaAir</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-	
-	            <% site.pages.find({type: 'guide_egret'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>Egret</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-
-	            <% site.pages.find({type: 'guide_starling'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>Starling</h3></li>
-	                <% } %>
-	                <li>
-	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
-	                </li>
-	            <% }) %>
-
-	            <% site.pages.find({type: 'guide_as3'}).sort('order').each(function (p) { %>
-	                <% var fileName = p.path.replace(/^.+?\/([\w-]+)\.html/, '$1') %>
-	                <% if (fileName === 'index') { %>
-	                <li><h3>Flash AS3</h3></li>
+	                <li><h3>SDK - Unity</h3></li>
 	                <% } %>
 	                <li>
 	                    <a href="<%- url_for(p.path) %>" class="sidebar-link<%- page.title === p.title ? ' current' : '' %><%- p.is_new ? ' new' : '' %>"><%- p.title %></a>
